Refactor into respective package and debug warnings