@@ -1,4 +1,4 @@
-package seedu.address.logic.commands;
+package seedu.address.logic.commands.tag;
 
 import static seedu.address.logic.Messages.MESSAGE_INVALID_COMMAND_FORMAT;
 import static seedu.address.testutil.Assert.assertThrows;
@@ -8,14 +8,16 @@ import static seedu.address.testutil.TypicalPersons.getTypicalAddressBook;
 
 import java.util.Arrays;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Set;
 
 import org.junit.jupiter.api.Test;
 
 import seedu.address.commons.core.index.Index;
 import seedu.address.logic.Messages;
-import seedu.address.logic.parser.UntagCommandParser;
+import seedu.address.logic.commands.CommandTestUtil;
 import seedu.address.logic.parser.exceptions.ParseException;
+import seedu.address.logic.parser.tag.UntagCommandParser;
 import seedu.address.model.Model;
 import seedu.address.model.ModelManager;
 import seedu.address.model.UserPrefs;
@@ -27,13 +29,13 @@ import seedu.address.model.wedding.WeddingName;
 
 public class UntagCommandTest {
 
-    private Model model = new ModelManager(getTypicalAddressBook(), new UserPrefs());
+    private final Model model = new ModelManager(getTypicalAddressBook(), new UserPrefs());
 
 
     @Test
     public void execute_validTagsUnfilteredList_success() {
         Person personToEdit = model.getFilteredPersonList().get(INDEX_FIRST.getZeroBased());
-        HashSet<Tag> tagsToRemove = new HashSet<>(Arrays.asList(new Tag(new TagName("friends"))));
+        HashSet<Tag> tagsToRemove = new HashSet<>(List.of(new Tag(new TagName("friends"))));
 
         UntagCommand untagCommand = new UntagCommand(INDEX_FIRST, tagsToRemove);
 
@@ -95,7 +97,7 @@ public class UntagCommandTest {
 
     @Test
     public void execute_nonExistentTag_failure() {
-        HashSet<Tag> tagsToRemove = new HashSet<>(Arrays.asList(new Tag(new TagName("nonExistentTag"))));
+        HashSet<Tag> tagsToRemove = new HashSet<>(List.of(new Tag(new TagName("nonExistentTag"))));
         UntagCommand untagCommand = new UntagCommand(INDEX_FIRST, tagsToRemove);
         String expectedMessage = Messages.MESSAGE_TAG_NOT_FOUND_IN_CONTACT;
         CommandTestUtil.assertCommandFailure(untagCommand, model, expectedMessage);
@@ -109,17 +111,14 @@ public class UntagCommandTest {
         UntagCommandParser parser = new UntagCommandParser();
 
         String expectedMessage = String.format(MESSAGE_INVALID_COMMAND_FORMAT, UntagCommand.MESSAGE_USAGE);
-        assertThrows(ParseException.class, expectedMessage, () -> {
-            parser.parse(userInput);
-        });
-
+        assertThrows(ParseException.class, expectedMessage, () -> parser.parse(userInput));
     }
 
 
     @Test
     public void execute_invalidIndexUnfilteredList_failure() {
         Index outOfBoundIndex = Index.fromOneBased(model.getFilteredPersonList().size() + 1);
-        HashSet<Tag> tagsToRemove = new HashSet<>(Arrays.asList(new Tag(new TagName("friends"))));
+        HashSet<Tag> tagsToRemove = new HashSet<>(List.of(new Tag(new TagName("friends"))));
 
         UntagCommand untagCommand = new UntagCommand(outOfBoundIndex, tagsToRemove);
 
@@ -143,7 +142,7 @@ public class UntagCommandTest {
         );
 
         model.setPerson(model.getFilteredPersonList().get(INDEX_SECOND.getZeroBased()), personWithoutTags);
-        HashSet<Tag> tagsToRemove = new HashSet<>(Arrays.asList(new Tag(new TagName("friends"))));
+        HashSet<Tag> tagsToRemove = new HashSet<>(List.of(new Tag(new TagName("friends"))));
         UntagCommand untagCommand = new UntagCommand(INDEX_SECOND, tagsToRemove);
         String expectedMessage = Messages.MESSAGE_TAG_NOT_FOUND_IN_CONTACT;
 
